--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puzzling-gift-frontend",
+  "name": "puzzling-gift",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/puzzling-gift#readme",
   "devDependencies": {
+    "@types/node": "^17.0.40",
     "parcel": "^2.6.0",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "firebase": "^9.8.2",
     "preact": "^10.7.3"
   },
   "alias": {
