--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "/*": ["*"],
       "~/*": ["*"]
     },
-    "types": ["preact"]
+    "types": ["preact", "node"]
   },
   "filesGlob": ["./src/**/*.ts"],
   "exclude": ["node_modules", "public"],
