--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "puzzling-gift",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build",
+    "start": "parcel --dist-dir public",
+    "build": "parcel build --dist-dir public",
     "check": "tsc --noEmit"
   },
   "repository": {
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/puzzling-gift#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.0",
+    "@parcel/validator-typescript": "^2.6.0",
     "@types/node": "^17.0.40",
     "parcel": "^2.6.0",
     "typescript": "^4.7.3"
@@ -31,5 +33,10 @@
   },
   "alias": {
     "preact/jsx-dev-runtime": "preact/jsx-runtime"
+  },
+  "targets": {
+    "default": {
+      "distDir": "public"
+    }
   }
 }
