--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### project specific ###
+public
+
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,vim,rust,node,macos,linux,firebase
