--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@parcel/validator-typescript": "^2.6.0",
     "@types/node": "^17.0.40",
     "parcel": "^2.6.0",
+    "process": "^0.11.10",
     "typescript": "^4.7.3"
   },
   "dependencies": {
