--- a/package.json
+++ b/package.json
@@ -29,10 +29,18 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
     "firebase": "^9.8.2",
     "preact": "^10.7.3"
   },
   "alias": {
-    "preact/jsx-dev-runtime": "preact/jsx-runtime"
+    "preact/jsx-dev-runtime": "preact/jsx-runtime",
+    "react/jsx-runtime": "preact/jsx-runtime",
+    "react": "preact/compat",
+    "react-dom/test-utils": "preact/test-utils",
+    "react-dom": "preact/compat"
   }
 }
