--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "@redux-devtools/extension": "^3.2.2",
     "firebase": "^9.8.2",
-    "preact": "^10.7.3"
+    "preact": "^10.7.3",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3"
   },
   "alias": {
     "preact/jsx-dev-runtime": "preact/jsx-runtime",
