--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ web_modules/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
+parcel-bundle-reports
 
 # Next.js build output
 .next
