switched over to react because preact and parcel are broken, of course

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "isolatedModules": false,
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
+    "jsxImportSource": "react",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declaration": false,
@@ -22,13 +22,10 @@
     "lib": ["dom", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "preact/jsx-dev-runtime": ["node_modules/preact/jsx-runtime/"],
-      "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"],
       "/*": ["*"],
       "~/*": ["*"]
     },
-    "types": ["preact", "node"]
+    "types": ["react", "node"]
   },
   "filesGlob": ["./src/**/*.ts"],
   "exclude": ["node_modules", "public"],
