--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "puzzling-gift",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "src/index.html",
   "scripts": {
@@ -21,6 +20,7 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/puzzling-gift#readme",
   "devDependencies": {
+    "@parcel/reporter-bundle-analyzer": "^2.6.1",
     "@parcel/transformer-sass": "^2.6.0",
     "@parcel/validator-typescript": "^2.6.0",
     "@types/node": "^17.0.40",
@@ -34,17 +34,16 @@
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@redux-devtools/extension": "^3.2.2",
+    "@swc/helpers": "^0.4.2",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.2",
     "preact": "^10.7.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3"
-  },
-  "alias": {
-    "preact/jsx-dev-runtime": "preact/jsx-runtime",
-    "react/jsx-runtime": "preact/jsx-runtime",
-    "react": "preact/compat",
-    "react-dom/test-utils": "preact/test-utils",
-    "react-dom": "preact/compat"
+    "redux-saga": "^1.1.3",
+    "regenerator-runtime": "^0.13.9"
   }
 }
