--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.3",
     "@redux-devtools/extension": "^3.2.2",
     "@swc/helpers": "^0.4.2",
